# inmemory-cluster

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  justfile  renovate.json
examples/node/: index.mts  package-lock.json  package.json
scripts/: start-local.sh
src/: env.rs  lib.rs  main.rs  sigterm.rs  timing.rs
src/server/http/: app.rs  mod.rs  router.rs
src/server/http/data/: add.rs  get.rs  mod.rs
src/server/http/ui/: get_stats.rs  home.rs  list_peers.rs  list_values.rs  mod.rs
src/server/tcp/: expose_known_peers.rs  handle_client.rs  mod.rs  tcp.rs
src/server/tcp/commands/: add.rs  copy.rs  disconnect_from_peers.rs  flush_all.rs  get_stats.rs  mod.rs  warn_peers_you_exist.rs
src/server/tcp/responses/: identification.rs  mod.rs  stats.rs
templates/: home.html
tests/: home.rs
