[package]
name = "inmemory_cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
ctrlc = "3"
env_logger = "0.11.8"
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
log = "0.4.27"
rand = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.41", features = [] }
gethostname = "1.0.2"
signal-hook = "0.3.18"
strum = "0.27"
strum_macros = "0.27"
actix-web = "4.11.0"
actix-cors = "0.7.1"
speculate = "0.1.2"
serde = "1.0.219"
termcolor = "1.4.1"
ansi_term = "0.12.1"
peak_alloc = "0.3.0"
tera = "1.20.0"
sysinfo = "0.37.0"
